--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "0.19.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
     "vant": "2.5.7",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
